SONAR-16159 Fix SSF-235